# axis-remote-ssh-fix

./: README.md
axis_remote_client/: Makefile  config.h  config.status  configure  configure.ac  libtool
axis_remote_client/autom4te.cache/: output.0  output.1  requests  traces.1
axis_remote_client/src/: Makefile  Makefile.am  Makefile.in  axis_remote_client.cc
axis_remote_client_octave/: axis_remote_client.cc
axis_remote_server/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac  libtool
axis_remote_server/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
axis_remote_server/src/: Makefile  Makefile.am  Makefile.in  axis_remote_server.cc
